# mlflow-learning-plan

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  mise.toml  pyproject.toml
.claude/: settings.json
docs/: 01-classical-ml-background.md  02-generative-ai-background.md  README.md  todo.md
docs/start/: mlflow-learning-plan-01.md  mlflow-learning-plan-02.md
notebooks/01-classical-ml/00-setup/: README.md  setup.py
notebooks/01-classical-ml/01-foundations-setup/: README.md  notebook.py
notebooks/01-classical-ml/02-experiment-tracking/: README.md  notebook.py
notebooks/01-classical-ml/03-models-and-registry/: README.md  notebook.py
notebooks/01-classical-ml/04-projects-reproducibility/: README.md  notebook.py
notebooks/02-generative-ai/00-setup/: README.md  setup.py
notebooks/02-generative-ai/01-tracing-observability/: README.md  notebook.py
notebooks/02-generative-ai/02-evaluation-datasets/: README.md  notebook.py
notebooks/02-generative-ai/03-llm-judges-scorers/: README.md  notebook.py
notebooks/02-generative-ai/04-human-feedback-prompts/: README.md  notebook.py
notebooks/02-generative-ai/05-continuous-evaluation/: README.md  notebook.py
scripts/: clean.sh  env.sh  mlflow-server.sh  mlflow-stop.sh  run-classical.sh  run-genai.sh  setup.sh  verify.sh
