[project]
name = "mlflow-learning-plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.103.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "mlflow>=3.12.0",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
